export interface Site {
  id: string;
  name: string;
  code: string;
  region: string;
  country: string;
  location: string;
  description: string;
  is_active: boolean;
  created_at: string;
  updated_at: string;
}
