Project CSR_Management_System {
  database_type: "MySQL"
  note: "Base utilisée : MySQL 8+. Schéma conceptuel aligné avec backend/models/"
}

//////////////////////////////////////////////////////
//////////////////// ENUMS ///////////////////////////
//////////////////////////////////////////////////////

Enum user_role {
  SITE_USER
  CORPORATE_USER
}

Enum plan_status {
  DRAFT
  SUBMITTED
  VALIDATED
  REJECTED
  LOCKED
}

Enum activity_status {
  DRAFT
  IN_PROGRESS
  COMPLETED
  CANCELLED
  VALIDATED
}

Enum validation_status {
  PENDING
  APPROVED
  REJECTED
}

Enum entity_type {
  PLAN
  ACTIVITY
}

Enum partner_type {
  NGO
  SCHOOL
  ASSOCIATION
  SUPPLIER
  GOVERNMENT
  OTHER
}

// From Annual CSR Plan: Organization (Internal / Partnership)
Enum organization_type {
  INTERNAL
  PARTNERSHIP
}

// From Annual CSR Plan: Contract type (One shot / Successive performance)
Enum contract_type {
  ONE_SHOT
  SUCCESSIVE_PERFORMANCE
}

// From Consolidated Report: Nature of collaboration
Enum collaboration_nature {
  CHARITY_DONATION
  PARTNERSHIP
  SPONSORSHIP
  OTHERS
}

//////////////////////////////////////////////////////
//////////////////// USERS & SITES ///////////////////
//////////////////////////////////////////////////////

Table users {
  id uuid [pk]
  first_name varchar
  last_name varchar
  email varchar [unique]
  password_hash varchar
  role user_role
  is_active boolean
  created_at timestamp
  updated_at timestamp
}

Table user_sessions {
  id uuid [pk]
  user_id uuid
  refresh_token varchar
  ip_address varchar
  user_agent varchar
  expires_at timestamp
  created_at timestamp
}

Ref: user_sessions.user_id > users.id

// Site = Plant/COFICAB Entity; region & country from Consolidated Report
Table sites {
  id uuid [pk]
  name varchar
  code varchar [unique]
  region varchar
  country varchar
  location varchar
  description text
  is_active boolean
  created_at timestamp
  updated_at timestamp
}

Table user_sites {
  id uuid [pk]
  user_id uuid
  site_id uuid
  granted_by uuid
  granted_at timestamp
}

Ref: user_sites.user_id > users.id
Ref: user_sites.site_id > sites.id
Ref: user_sites.granted_by > users.id

//////////////////////////////////////////////////////
//////////////////// CATEGORIES //////////////////////
//////////////////////////////////////////////////////

Table categories {
  id uuid [pk]
  name varchar
  description text
  created_at timestamp
  updated_at timestamp
}

//////////////////////////////////////////////////////
//////////////// EXTERNAL PARTNERS ///////////////////
//////////////////////////////////////////////////////

Table external_partners {
  id uuid [pk]
  name varchar
  type partner_type
  contact_person varchar
  email varchar
  phone varchar
  address text
  website varchar
  description text
  is_active boolean
  created_at timestamp
  updated_at timestamp
}

//////////////////////////////////////////////////////
//////////////////// CSR PLAN ////////////////////////
//////////////////////////////////////////////////////

Table csr_plans {
  id uuid [pk]
  site_id uuid
  year int
  validation_mode varchar [default: '101', note: '101 ou 111']
  status plan_status
  total_budget decimal [null]
  submitted_at timestamp [null]
  rejected_comment text [null]
  rejected_activity_ids text [null, note: 'JSON array of activity UUIDs']
  validation_step int [null]
  validated_at timestamp [null]
  created_by uuid [null]
  created_at timestamp
  updated_at timestamp

  indexes {
    (site_id, year) [unique]
  }
}

Ref: csr_plans.site_id > sites.id
Ref: csr_plans.created_by > users.id

//////////////////////////////////////////////////////
//////////////// CSR ACTIVITIES //////////////////////
//////////////////////////////////////////////////////
// Aligned with: Annual CSR Plan + Consolidated Report (Group figures)

Table csr_activities {
  id uuid [pk]
  plan_id uuid [null]
  site_id uuid
  category_id uuid
  external_partner_id uuid [null]
  activity_number varchar
  title varchar
  description text
  activity_type varchar
  organization organization_type
  collaboration_nature collaboration_nature [null]
  contract_type contract_type
  periodicity varchar
  planned_budget decimal [null]
  planned_volunteers int [null]
  action_impact_target decimal [null]
  action_impact_unit varchar [null]
  action_impact_duration varchar [null]
  sustainability_description text [null]
  start_year int [null]
  edition int [null]
  organizer varchar [null]
  responsible_user_id uuid
  start_date date
  end_date date
  status activity_status
  slide_number varchar [null]
  created_at timestamp
  updated_at timestamp

  indexes {
    (site_id)
    (category_id)
    (site_id, activity_number) [unique]
  }
}

Ref: csr_activities.plan_id > csr_plans.id
Ref: csr_activities.site_id > sites.id
Ref: csr_activities.category_id > categories.id
Ref: csr_activities.responsible_user_id > users.id
Ref: csr_activities.external_partner_id > external_partners.id

Table activity_kpis {
  id uuid [pk]
  activity_id uuid
  name varchar
  target_value decimal
  actual_value decimal [null]
  unit varchar
}

Ref: activity_kpis.activity_id > csr_activities.id

//////////////////////////////////////////////////////
//////////////// REALIZED CSR ////////////////////////
//////////////////////////////////////////////////////
// Aligned with: CSR Reporting form + Consolidated Report (Actual Budget, Participants, Impact, etc.)

Table realized_csr {
  id uuid [pk]
  activity_id uuid
  realized_budget decimal
  participants int
  total_hc int [null]
  percentage_employees decimal [null]
  volunteer_hours decimal
  action_impact_actual decimal [null]
  action_impact_unit varchar [null]
  impact_description text
  organizer varchar [null]
  number_external_partners int [null]
  realization_date date
  comment text
  contact_department varchar [null]
  contact_name varchar [null]
  contact_email varchar [null]
  created_by uuid
  created_at timestamp
}

Ref: realized_csr.activity_id > csr_activities.id
Ref: realized_csr.created_by > users.id

//////////////////////////////////////////////////////
//////////////// VALIDATION WORKFLOW /////////////////
//////////////////////////////////////////////////////

Table validations {
  id uuid [pk]
  entity_type entity_type
  entity_id uuid
  site_id uuid
  grade varchar [null, note: 'level_1, level_2']
  status validation_status
  validated_by uuid [null]
  comment text [null]
  rejected_activity_ids text [null, note: 'JSON array of activity UUIDs']
  validated_at timestamp [null]
  created_at timestamp

  indexes {
    (entity_type, entity_id, grade) [unique]
  }
}

Ref: validations.site_id > sites.id
Ref: validations.validated_by > users.id

Table validation_steps {
  id uuid [pk]
  validation_id uuid
  level int
  validator_id uuid
  status validation_status
  comment text
  validated_at timestamp [null]
}

Ref: validation_steps.validation_id > validations.id
Ref: validation_steps.validator_id > users.id

//////////////////////////////////////////////////////
//////////////// CHANGE REQUESTS /////////////////////
//////////////////////////////////////////////////////

Table change_requests {
  id uuid [pk]
  site_id uuid
  entity_type entity_type
  entity_id uuid
  year int
  reason text
  status validation_status
  requested_by uuid
  reviewed_by uuid [null]
  reviewed_at timestamp [null]
  created_at timestamp
}

Ref: change_requests.site_id > sites.id
Ref: change_requests.requested_by > users.id
Ref: change_requests.reviewed_by > users.id

//////////////////////////////////////////////////////
//////////////// DOCUMENT MANAGEMENT /////////////////
//////////////////////////////////////////////////////

Table documents {
  id uuid [pk]
  site_id uuid
  entity_type entity_type
  entity_id uuid
  file_name varchar
  file_path varchar
  mime_type varchar
  file_size bigint
  uploaded_by uuid
  uploaded_at timestamp
}

Ref: documents.site_id > sites.id
Ref: documents.uploaded_by > users.id

//////////////////////////////////////////////////////
//////////////// AUDIT & HISTORY /////////////////////
//////////////////////////////////////////////////////

Table audit_logs {
  id uuid [pk]
  site_id uuid
  user_id uuid
  action varchar
  entity_type entity_type
  entity_id uuid
  description text
  created_at timestamp
}

Ref: audit_logs.site_id > sites.id
Ref: audit_logs.user_id > users.id

Table entity_history {
  id uuid [pk]
  site_id uuid
  entity_type entity_type
  entity_id uuid
  old_data jsonb
  new_data jsonb
  modified_by uuid
  modified_at timestamp
}

Ref: entity_history.site_id > sites.id
Ref: entity_history.modified_by > users.id

//////////////////////////////////////////////////////
//////////////// NOTIFICATIONS ///////////////////////
//////////////////////////////////////////////////////

Table notifications {
  id uuid [pk]
  user_id uuid
  site_id uuid
  title varchar
  message text
  type varchar
  entity_type varchar [note: 'PLAN, CHANGE_REQUEST, etc.']
  entity_id uuid [null]
  is_read boolean
  created_at timestamp
}

Ref: notifications.user_id > users.id
Ref: notifications.site_id > sites.id

Table user_notifications {
  id uuid [pk]
  user_id uuid
  notification_id uuid
  is_read boolean
  read_at timestamp [null]
  created_at timestamp
}

Ref: user_notifications.notification_id > notifications.id
Ref: user_notifications.user_id > users.id

Table notification_settings {
  id uuid [pk]
  user_id uuid
  site_id uuid
  email_enabled boolean
}

Ref: notification_settings.user_id > users.id
Ref: notification_settings.site_id > sites.id

//////////////////////////////////////////////////////
//////////////// POWER BI SNAPSHOTS //////////////////
//////////////////////////////////////////////////////

Table csr_snapshots {
  id uuid [pk]
  site_id uuid
  year int
  month int
  total_budget decimal
  total_realized decimal
  total_activities int
  completion_rate decimal
  created_at timestamp

  indexes {
    (site_id, year, month) [unique]
  }
}

Ref: csr_snapshots.site_id > sites.id

//////////////////////////////////////////////////////
//////////////// CHATBOT LOG /////////////////////////
//////////////////////////////////////////////////////

Table chatbot_logs {
  id uuid [pk]
  user_id uuid
  site_id uuid
  question text
  answer text
  created_at timestamp
}

Ref: chatbot_logs.user_id > users.id
Ref: chatbot_logs.site_id > sites.id
